gulpfile refactoring / header

--- a/src/common/base-head.pug
+++ b/src/common/base-head.pug
@@ -12,4 +12,4 @@ head
         rel="stylesheet"
     )
 
-    link(rel='stylesheet', href='./css/style.css')
+    link(rel='stylesheet', href='./css/styles/style.css')
