--- a/src/common/page-base-template.pug
+++ b/src/common/page-base-template.pug
@@ -5,12 +5,13 @@ html
         block links
 
         block title
-            title 1
 
     body    
-        include ../components/header/header.pug  
-        
-        block body
+        div.content
+            include ../components/header/header.pug  
+            
+            block bodyContent
+
         
 
     //- include ./base-scripts.pug
