--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,1 +1,22 @@
-h1 S1nkjbnkl
+block links 
+    link(rel="stylesheet", href="./css/components/header/style.css")
+
+.header
+    .header__logo
+        a(href="/")
+            img(src="/images/logo.svg", alt="logo")
+    .header__menu
+        ul
+            li
+                a(href="/solution") Solution
+            li
+                a(href="/industries") Industries
+            li
+                a(href="/products") Products
+            li
+                a(href="/resources") Resources
+            li
+                a(href="/pricing") Pricing
+            li 
+                button.button
+                    | Login
