--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,9 +1,3 @@
-include ../common/page-base-template.pug
-    //- block links
-    //-     link(rel="stylesheet" href="index.css")
-    block title
-        title ddsadsa
-    block body
-        | Hello World
-    //- block scripts
-    //-     script(src="index.js")
+extends ../common/page-base-template.pug
+block bodyContent
+    | Empty
