--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,8 @@
-// $md: 768px;
-// $lg: 992px;
-// $l: 1024px;
-// $xl: 1200px;
-// $xxl: 1400px;
+$md: 768px;
+$lg: 992px;
+$x: 1024px;
+$xl: 1200px;
+$xxl: 1400px;
 
 $base-font-family: 'Jost', Tahoma, Geneva, Verdana, sans-serif;
 
