gulpfile ts fix / header

--- a/src/common/page-base-template.pug
+++ b/src/common/page-base-template.pug
@@ -4,7 +4,10 @@ html
     include ./base-head.pug
         block links
 
-        block title
+        title
+            block title
+                | PrimeCRM
+            
 
     body    
         div.content
