icons / footer initial

--- a/src/common/page-base-template.pug
+++ b/src/common/page-base-template.pug
@@ -15,8 +15,7 @@ html
             
             block bodyContent
 
-        
-
+            include ../components/footer/footer.pug
     //- include ./base-scripts.pug
     block scripts
 
