--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,7 +1,7 @@
 block links 
     link(rel="stylesheet", href="./css/components/header/style.css")
 
-.header
+header.header
     .header__logo
         a(href="/")
             img(src="/images/logo.svg", alt="logo").full
