--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,21 +1,6 @@
 @import "./colors";
 @import "./variables";
 
-
-html {
-  height: 100vh;
-}
-
-body {
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
-
 * {
   font-family: $base-font-family;
 }
@@ -82,20 +67,31 @@ ul li {
   color: #FFFFFF;
   border-radius: 5px;
   background-color: $color-primary-black;
-  transition: color $transition-duration, background-color $transition-duration;
+  transition: color $transition-duration,
+    background-color $transition-duration,
+    border-color $transition-duration;
 
   &:hover {
     cursor: pointer;
     background-color: $color-primary-green;
     color: $color-primary-black;
   }
-  .disabled {
+  &.disabled {
     background-color: #EAEAEA;
     color: $color-secondary-black;
   }
-  .primary {
+  &.primary {
     background-color: $color-primary-blue;
     color: var(--color-primary-black);
+  }
+  &.transparent {
+    background-color: transparent;
+    color: $color-primary-black;
+    border: 1px solid transparent;
+  }
+  &.transparent:hover {
+    color: $color-primary-blue;
+    border-color: $color-primary-black;
   }
 }
 
@@ -103,6 +99,7 @@ ul li {
   max-width: calc(100% - 28px);
   width: 100%;
   margin: 0 auto;
+  height: 100%;
 
   @media (min-width: $sm) {
     max-width: calc($sm - 28px);
