--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,3 +9,7 @@ $base-font-family: 'Jost', Tahoma, Geneva, Verdana, sans-serif;
 
 $transition-duration: .3s;
 
+$headerMarginVertical: 34px;
+$headerMarginVerticalMobile: 16px;
+$headerHeight: 52px;
+
