--- a/src/common/base-head.pug
+++ b/src/common/base-head.pug
@@ -12,4 +12,6 @@ head
         rel="stylesheet"
     )
 
+    link(type="text/css", rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css")
+
     link(rel='stylesheet', href='./css/styles/style.css')
