--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,6 +1,3 @@
-block links 
-    link(rel="stylesheet", href="./css/components/footer/style.css")
-
 footer.footer
     .footer__background
     .footer__top 
@@ -16,3 +13,4 @@ footer.footer
                 .icon.linkedin
             a(href="#")
                 .icon.youtube
+    .footer__
