--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,30 +1,25 @@
-block links 
-    link(rel="stylesheet", href="./css/components/header/style.css")
-
 header.header
-    .header__logo
-        a(href="/")
-            img(src="/images/logo.svg", alt="logo").full
-            img(src="/images/logo-cropped.svg", alt="logo").mobile
-    .header__menu
-        .header__menu-trigger
-            span 
-            span    
-            span
-        ul
-            li
-                a(href="/solution") Solution
-            li
-                a(href="/industries") Industries
-            li
-                a(href="/products") Products
-            li
-                a(href="/resources") Resources
-            li
-                a(href="/pricing") Pricing
-            li 
-                button.button
-                    | Login
-
-block scripts
-    script(src="./js/components/header/menu.js")
+    .content
+        .header__logo
+            a(href="/")
+                img(src="/images/logo.svg", alt="logo").full
+                img(src="/images/logo-cropped.svg", alt="logo").mobile
+        .header__menu
+            .header__menu-trigger
+                span 
+                span    
+                span
+            ul
+                li
+                    a(href="/solution") Solution
+                li
+                    a(href="/industries") Industries
+                li
+                    a(href="/products") Products
+                li
+                    a(href="/resources") Resources
+                li
+                    a(href="/pricing") Pricing
+                li 
+                    button.button
+                        | Login
