--- a/src/common/base-scripts.pug
+++ b/src/common/base-scripts.pug
@@ -1,2 +1,3 @@
 script(src="./js/components/header/menu.js")
 script(src="./js/components/header/header.js")
+script(src="./js/components/footer/toggle.js")
