--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,16 +1,72 @@
 footer.footer
-    .footer__background
-    .footer__top 
-        img(src="../../images/logo.svg", alt="logo")
-        .footer__top-socials
-            a(href="#")
-                .icon.instagram
-            a(href="#")
-                .icon.facebook
-            a(href="#")
-                .icon.twitter
-            a(href="#")
-                .icon.linkedin
-            a(href="#")
-                .icon.youtube
-    .footer__
+    .content
+        .footer__background
+        .footer__top 
+            img(src="../../images/logo.svg", alt="logo")
+            .footer__top-socials
+                a(href="#")
+                    .icon.instagram
+                a(href="#")
+                    .icon.facebook
+                a(href="#")
+                    .icon.twitter
+                a(href="#")
+                    .icon.linkedin
+                a(href="#")
+                    .icon.youtube
+        .footer__info
+            .footer__info-item
+                h4
+                    | Usefull Link
+                ul
+                    li
+                        a(href="#") Solution
+                    li
+                        a(href="#") Industries
+                    li
+                        a(href="#") Products
+                    li
+                        a(href="#") Resources
+                    li
+                        a(href="#") Pricing
+            .footer__info-item
+                h4
+                    | Service
+                ul
+                    li
+                        a(href="#") Sale
+                    li
+                        a(href="#") Marketing
+                    li
+                        a(href="#") Real Estate
+                    li
+                        a(href="#") Autimotive
+                    
+                        a(href="#") Eucation
+                    li
+                        a(href="#") Pricing
+            .footer__info-item.contact
+                h4
+                    | Contact Us
+                ul
+                    li
+                        a(href="#")
+                            | 1700 W Blancke St, kiyev port south USA, American
+                    li
+                        a(href="tel:+3255 456 789")
+                            | +3255 456 789
+                        a(href="mailto:mail@primarily.com")
+                            | mail@primarily.com
+            .footer__info-item.shrink-0
+                .footer__info-item-head
+                    h4
+                        | Our Latest News
+                    button.button.transparent.toggleFooter
+                        img(src="../../images/icons/arrow-button.svg", alt="arrow-button")
+                ul
+                    li
+                        img.bg(src="../../images/phone-horizontal.png", alt="phone-horizontal")
+                        button.button.glass.btn-read
+                            | Read Now
+        .footer__copyright 
+            | Copyright © Primarly | Designed by VictorFlow Templates          
