--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,13 +9,6 @@ img {
   max-width: 100%;
 }
 
-h1,
-h2,
-h3,
-h4 {
-  color: $color-primary-black;
-}
-
 h1 {
   font-weight: 600;
   font-size: 60px;
@@ -51,8 +44,36 @@ ul li {
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 288.5%;
+  line-height: 1.2;
   color: $color-primary-black;
+}
+
+body {
+}
+.content {
+  max-width: calc(100% - 28px);
+  width: 100%;
+  margin: 0 auto;
+  height: 100%;
+
+  @media (min-width: $sm) {
+    max-width: calc($sm - 28px);
+  }
+  @media (min-width: $md) {
+    max-width: calc($md - 28px);
+  }
+  @media (min-width: $lg) {
+    max-width: calc($lg - 28px);
+  }
+  @media (min-width: $x) {
+    max-width: calc($x - 28px);
+  }
+  @media (min-width: $xl) {
+    max-width: calc($xl - 28px);
+  }
+  @media (min-width: $xxl) {
+    max-width: calc($xxl - 28px);
+  }
 }
 
 .button {
@@ -90,34 +111,19 @@ ul li {
     border: 1px solid transparent;
   }
   &.transparent:hover {
-    color: $color-primary-blue;
+    color: $color-primary-green;
     border-color: $color-primary-black;
+    background-color: $color-primary-black;
   }
-}
-
-.content {
-  max-width: calc(100% - 28px);
-  width: 100%;
-  margin: 0 auto;
-  height: 100%;
-
-  @media (min-width: $sm) {
-    max-width: calc($sm - 28px);
+  &.glass {
+    background: rgba(255, 255, 255, 0.75);
+    border-radius: 5px;
+    font-weight: 600;
+    color: #313131;
+    border-color: rgba(255, 255, 255, 0.75);
   }
-  @media (min-width: $md) {
-    max-width: calc($md - 28px);
-  }
-  @media (min-width: $lg) {
-    max-width: calc($lg - 28px);
-  }
-  @media (min-width: $x) {
-    max-width: calc($x - 28px);
-  }
-  @media (min-width: $xl) {
-    max-width: calc($xl - 28px);
-  }
-  @media (min-width: $xxl) {
-    max-width: calc($xxl - 28px);
+  &.glass:hover {
+    border-color: $color-primary-green;
   }
 }
 
