--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -20,4 +20,26 @@ block bodyContent
         img.section-heading__bg(src="./images/heading-bg.png" alt="background")
 
     section.section-features
-
+        h4.section-features__title
+            | Explore Premium Features
+        p.section-features__description
+            | Unique and powerful suite of software to run your entire business, brought to you by a company with the long term vision to transform the way you work.
+        .section-features__cards
+            .section-features__card
+                img(src="./images/icons/gear.svg" alt="gear")
+                h5.section-features__card-title
+                    | Powerful Settings
+                p.section-features__card-description
+                    | Provide excellent customer service. Answer more tickets.
+            .section-features__card.active
+                img(src="./images/icons/person.svg" alt="person")
+                h5.section-features__card-title
+                    | User Friendly
+                p.section-features__card-description
+                    | Use Timeline to plan projects right how the pieces fit together.
+            .section-features__card
+                img(src="./images/icons/check-abstract.svg" alt="check-abstract")
+                h5.section-features__card-title
+                    | Integrated platform
+                p.section-features__card-description
+                    | Vivamus massa eleifend etiam neque odio feugiat dolor est.
